test/errors/comprehension_starred_element.py
values = [1]
a = [*x for x in values]
b = {*x for x in values}
